# dxfeed-jni-cxx-api-samples

./: .gitattributes  README.md
dll-sample/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
dll-sample/dxfeed-plugin/: CMakeLists.txt  plugin.cpp
dll-sample/plugin-api/: CMakeLists.txt  plugin-api.h
dll-sample/sample/: CMakeLists.txt  main.c
